--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       }(window.location))
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <title>React App</title>
+    <title>Alexandre | Blog</title>
   </head>
   <body>
     <div id="root"></div>
